<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="jarvis_settings_title">JARVIS Settings</string>
    <string name="button_title">Buttons</string>
    <string name="gestures_title">Gestures</string>
    <string name="lockscreen_title">Lock screen</string>
    <string name="misc_title">Miscellaneous</string>
    <string name="misc_title_cat">Misc.</string>
    <string name="navbar_title">Navigation bar</string>
    <string name="notifications_title">Notifications</string>
    <string name="powermenu_title">Power menu</string>
    <string name="quicksettings_title">Quick Settings</string>
    <string name="recents_title">Recents apps</string>
    <string name="statusbar_title">Status bar</string>
    <string name="userinterface_title">User Interface</string>
    <string name="volume_title">Volume Settings</string>
    <string name="apps_title">Apps</string>
    <string name="enable">Enable</string>
    <string name="ok">OK</string>
    <string name="reset">Reset</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="unit_seconds">seconds</string>
    <string name="unit_pixels">dp</string>
    <string name="unit_milliseconds">milliseconds</string>
    <string name="default_string">Default</string>
    <string name="disabled">Disabled</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint" translatable="false">#FFDDDDDD</string>
    <string name="hex_check_button_text">PREVIEW</string>
    <string name="hex_reset_button_text">RESET</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="color_right_arrow" translatable="false">"→"</string>
    <string name="color_down_arrow" translatable="false">"↓"</string>
    <string name="longpress_info">Longpress box to save color</string>
    <string name="swipe_gestures_cat_title">Swipe gestures</string>
    <string name="three_finger_gesture">Swipe to screenshot</string>
    <string name="three_finger_gesture_summary">Swipe down with three fingers to take a screenshot</string>
    <string name="incall_vibration_category">In-call vibration options</string>
    <string name="incall_vibrate_connect_title">Vibrate on connect</string>
    <string name="incall_vibrate_call_wait_title">Vibrate on call waiting</string>
    <string name="incall_vibrate_disconnect_title">Vibrate on disconnect</string>
    <string name="global_actions_advanced_reboot_title">Enable advanced restart</string>
    <string name="global_actions_advanced_reboot_summary">Show options for recovery and bootloader in power menu</string>
    <string name="adaptive_playback_title">Adaptive playback</string>
    <string name="adaptive_playback_summary">Pause media when volume is muted and resume it by increasing volume within the timeout</string>
    <string name="adaptive_playback_intro_text">Automatically pauses media when the volume is muted and will resume automatically when volume is restored within the set time</string>
    <string name="adaptive_playback_timeout_title">Playback timeout</string>
    <string name="theme_customization_font_title">Preferred font</string>
    <string name="theme_customization_font_cat_title">Font style</string>
    <string name="theme_customization_font_summary">Set preferred system font style</string>
    <string name="theme_customization_icon_pack_title">SyetmUI icon style</string>
    <string name="theme_customization_icon_pack_summary">Set SystemUI icon style</string>
    <string name="theme_customization_icon_shape_title">Apps icon style</string>
    <string name="theme_customization_icon_shape_summary">Set apps icon style</string>
    <string name="theme_customization_signal_icon_title">Signal icon style</string>
    <string name="theme_customization_icons_cat_title">Icon styles</string>
    <string name="theme_customization_signal_icon_summary">Set signal icon style</string>
    <string name="theme_customization_wifi_icon_title">WiFi icon style</string>
    <string name="theme_customization_wifi_icon_summary">Set Wi-Fi icon style</string>
    <string name="status_bar_icons_title">Status bar icons</string>
    <string name="status_bar_icons_cat_title">System icons</string>
    <string name="status_bar_icons_summary">Control which status bar icons are shown</string>
    <string name="monet_settings_title">Theming settings</string>
    <string name="monet_settings_cat_title">Monet</string>
    <string name="monet_settings_sammary">A few extra settings to customize monet engine</string>
    <string name="theme_style_title">Theme style</string>
    <string name="theme_style_tonal_spot">Tonal Spot (Default)</string>
    <string name="theme_style_vibrant">Vibrant</string>
    <string name="theme_style_expressive">Exspressive</string>
    <string name="theme_style_spritz">Spritz</string>
    <string name="theme_style_rainbow">Rainbow</string>
    <string name="theme_style_fruit_salad">Fruit Salad</string>
    <string name="theme_style_muted">Muted</string>
    <string name="theme_style_content">Content</string>
    <string name="color_source_title">Color source</string>
    <string name="color_source_both">Both (Default)</string>
    <string name="color_source_home">Home wallpaper</string>
    <string name="color_source_lock">Lock wallpaper</string>
    <string name="color_source_preset">Preset</string>
    <string name="accent_color_title">Accent Color</string>
    <string name="accent_color_summary">Override default accent color</string>
    <string name="accent_background_title">Accent background</string>
    <string name="accent_background_summary">Choose a different accent color for background</string>
    <string name="bg_color_title">Background Color</string>
    <string name="bg_color_summary">Override default background accent color</string>
    <string name="luminance_factor_title">Luminance</string>
    <string name="luminance_factor_summary">Higher values produce brighter colors</string>
    <string name="chroma_factor_title">Chroma</string>
    <string name="chroma_factor_summary">Higher values produce stronger colors</string>
    <string name="tint_background_title">Tint Background</string>
    <string name="tint_background_summary">Make Luminance and Chroma selection affect background colors as well</string>
    <string name="ignore_window_secure_title">Ignore window secure flags</string>
    <string name="ignore_window_secure_summary">Remove screenshot and screenrecord limits for all apps. This can be convenient in some cases but may lead to privacy leaks.</string>
    <string name="qs_show_data_usage_title">Show data usage</string>
    <string name="qs_show_data_usage_summary">Show daily cellular/Wi-Fi data usage in QS footer</string>
    <string name="qs_brightness_slider_category">Brightness slider</string>
    <string name="qqs_show_brightness_title">Show brightness slider in Quick QS panel</string>
    <string name="brightness_slider_position_title">Brightness at bottom</string>
    <string name="brightness_slider_position_summary">Show brightness slider at the bottom of QS and QQS</string>
    <string name="show_auto_brightness_button_title">Show auto brightness button</string>
    <string name="fingerprint_authentication_cat_title">Fingerprint authentication</string>
    <string name="fp_success_vibrate_title">Fingerprint authentication vibration</string>
    <string name="fp_success_vibrate_summary">Vibrate when fingerprint authentication is successful</string>
    <string name="fp_error_vibrate_title">Fingerprint error vibration</string>
    <string name="fp_error_vibrate_summary">Vibrate when fingerprint authentication fails</string>
    <string name="pulse_ambient_light_title">Edge lighting</string>
    <string name="pulse_ambient_light_summary">Light up the side edges of the screen on notification pulse</string>
    <string name="pulse_ambient_light_color_title">Edge light color</string>
    <string name="pulse_ambient_light_duration_title">Edge light duration</string>
    <string name="pulse_ambient_light_duration_summary">Sets the ambient light animation duration</string>
    <string name="pulse_ambient_light_layout_title">Edge light view</string>
    <string name="pulse_ambient_light_layout_solid">Solid</string>
    <string name="pulse_ambient_light_layout_faded">Faded</string>
    <string name="pulse_on_new_tracks_title">Music ticker</string>
    <string name="pulse_on_new_tracks_summary">Show music ticker on Ambient Display during track change</string>
    <string name="pulse_help_policy_notice_title">About Pulse</string>
    <string name="pulse_help_policy_notice_summary">Pulse is a brilliant audio graphic equalizer when music plays on the device</string>
    <string name="pulse_settings">Pulse</string>
    <string name="pulse_settings_summary">Audio graphic equalizer for navigation bar and lockscreen</string>
    <string name="show_navbar_pulse_title">Navbar Pulse</string>
    <string name="show_navbar_pulse_summary">Audio graphic equalizer on the navigation bar</string>
    <string name="show_lockscreen_pulse_title">Lockscreen Pulse</string>
    <string name="show_lockscreen_pulse_summary">Audio graphic equalizer on the lockscreen</string>
    <string name="show_ambient_pulse_title">Ambient Pulse</string>
    <string name="show_ambient_pulse_summary">Audio graphic equalizer on the ambient screen</string>
    <string name="pulse_render_mode_title">Render mode</string>
    <string name="pulse_render_mode_fading_bars">Fading blocks</string>
    <string name="pulse_render_mode_solid_lines">Solid lines</string>
    <string name="pulse_legacy_mode_advanced_category">Fading blocks mode settings</string>
    <string name="pulse_custom_fudge_factor">Sanity level</string>
    <string name="pulse_lavalamp_speed_title">Lava lamp speed</string>
    <string name="pulse_solid_units_count">Solid lines count</string>
    <string name="pulse_solid_units_opacity">Solid lines opacity</string>
    <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
    <string name="pulse_color_mode_title">Color</string>
    <string name="pulse_color_accent">Accent</string>
    <string name="pulse_color_custom">Custom</string>
    <string name="pulse_color_lava_lamp">Lava lamp</string>
    <string name="pulse_color_auto">Album</string>
    <string name="pulse_color_user_title">Choose color</string>
    <string name="pulse_smoothing_enabled_title">Turn on smoothing</string>
    <string name="pulse_smoothing_enabled_summary">Each bar is animated more smoothly</string>
    <string name="pulse_custom_dimen">Bar width</string>
    <string name="pulse_custom_div">Bar spacing</string>
    <string name="pulse_filled_block_size">Block size</string>
    <string name="pulse_empty_block_size">Block spacing</string>
    <string name="pulse_solid_units_rounded_title">Rounded corners</string>
    <string name="pulse_solid_units_rounded_summary">Solid lines with rounded tip</string>
    <string name="show_clipboard_overlay_title">Show clipboard overlay</string>
    <string name="show_clipboard_overlay_summary">Show an overlay in the left bottom corner of the screen when something is copied to the clipboard</string>
    <string name="network_traffic_cat_title">Network traffic speed</string>
    <string name="network_traffic_title">Network traffic indicator</string>
    <string name="network_traffic_summary">Enable or disable network speed indicator in status bar</string>
    <string name="network_traffic_state_title">Enable "Network traffic indicator"</string>
    <string name="network_options_title">Options</string>
    <string name="network_traffic_autohide_title">Hide network traffic indicator is inactive</string>
</resources>