<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2022 JARVIS-ROM

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/userinterface_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Font style -->
    <PreferenceCategory
        android:title="@string/theme_customization_font_cat_title">

    <Preference
        android:key="android.theme.customization.fonts"
        android:title="@string/theme_customization_font_title"
        android:summary="@string/theme_customization_font_summary"
        android:fragment="com.jarvis.settings.fragments.FontsPicker"/>

    </PreferenceCategory>

    <!-- SyetmUI icon style -->
    <PreferenceCategory
        android:title="@string/theme_customization_icons_cat_title">

        <Preference
        android:key="android.theme.customization.icon_pack"
        android:title="@string/theme_customization_icon_pack_title"
        android:summary="@string/theme_customization_icon_pack_summary"
        android:fragment="com.jarvis.settings.fragments.StatusbarIcons"/>

    <!-- Apps icon style -->
    <Preference
        android:key="android.theme.customization.adaptive_icon_shape"
        android:title="@string/theme_customization_icon_shape_title"
        android:summary="@string/theme_customization_icon_shape_summary"
        android:fragment="com.jarvis.settings.fragments.IconShapes"/>


    <!-- Signal icon style -->
    <Preference
        android:key="android.theme.customization.signal_icon"
        android:title="@string/theme_customization_signal_icon_title"
        android:summary="@string/theme_customization_signal_icon_summary"
        android:fragment="com.jarvis.settings.fragments.SignalIcons"/>

    <!-- Wi-Fi icon style -->
    <Preference
        android:key="android.theme.customization.wifi_icon"
        android:title="@string/theme_customization_wifi_icon_title"
        android:summary="@string/theme_customization_wifi_icon_summary"
        android:fragment="com.jarvis.settings.fragments.WifiIcons"/>

    </PreferenceCategory>

    <!-- Monet settings -->
    <PreferenceCategory
        android:title="@string/monet_settings_cat_title">

    <Preference
        android:key="monet_settings"
        android:title="@string/monet_settings_title"
        android:summary="@string/monet_settings_sammary"
        android:fragment="com.jarvis.settings.fragments.MonetSettings" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_title_cat" >

        <Preference
            android:key="pulse_settings"
            android:title="@string/pulse_settings"
            android:summary="@string/pulse_settings_summary"
            android:fragment="com.jarvis.settings.fragments.PulseSettings" />

    </PreferenceCategory>
</PreferenceScreen>
