<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The PixelDust Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/notifications_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <!-- Incall vibration options -->
    <PreferenceCategory
        android:key="incall_vib_options"
        android:title="@string/incall_vibration_category" >

        <com.jarvis.settings.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_connect"
            android:title="@string/incall_vibrate_connect_title"
            android:defaultValue="false" />

        <com.jarvis.settings.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_callwaiting"
            android:title="@string/incall_vibrate_call_wait_title"
            android:defaultValue="false" />

        <com.jarvis.settings.preferences.SystemSettingSwitchPreference
            android:key="vibrate_on_disconnect"
            android:title="@string/incall_vibrate_disconnect_title"
            android:defaultValue="false" />

    </PreferenceCategory>

   <!-- Edge lighting -->
    <PreferenceCategory
        android:key="edge_lighting"
        android:title="@string/pulse_ambient_light_title" >

        <com.jarvis.settings.preferences.SecureSettingSwitchPreference
            android:key="pulse_ambient_light"
            android:title="@string/pulse_ambient_light_title"
            android:summary="@string/pulse_ambient_light_summary" />

        <com.jarvis.settings.preferences.SecureSettingListPreference
            android:key="pulse_ambient_light_layout"
            android:title="@string/pulse_ambient_light_layout_title"
            android:entries="@array/pulse_ambient_light_layout_entries"
            android:entryValues="@array/pulse_ambient_light_layout_values"
            android:defaultValue="0"
            android:dependency="pulse_ambient_light" />

        <com.jarvis.settings.preferences.colorpicker.SecureSettingColorPickerPreference
            android:key="pulse_ambient_light_color"
            android:title="@string/pulse_ambient_light_color_title"
            android:dependency="pulse_ambient_light"
            android:defaultValue="0xFF3980FF" />

        <com.jarvis.settings.preferences.SecureSettingSeekBarPreference
            android:key="pulse_ambient_light_duration"
            android:title="@string/pulse_ambient_light_duration_title"
            android:summary="@string/pulse_ambient_light_duration_summary"
            android:defaultValue="2"
            android:max="10"
            settings:min="1"
            settings:units="@string/unit_seconds"
            settings:interval="1"
            android:dependency="pulse_ambient_light" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_title_cat" >

        <com.jarvis.settings.preferences.SecureSettingSwitchPreference
            android:key="pulse_on_new_tracks"
            android:title="@string/pulse_on_new_tracks_title"
            android:summary="@string/pulse_on_new_tracks_summary" />

        <!-- Show clipboard overlay -->
        <com.jarvis.settings.preferences.SecureSettingSwitchPreference
            android:key="show_clipboard_overlay"
            android:title="@string/show_clipboard_overlay_title"
            android:summary="@string/show_clipboard_overlay_summary"
            android:defaultValue="true"/>
    </PreferenceCategory>
</PreferenceScreen>
