<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2017-2019 The PixelDust Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/lockscreen_title"
    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">

    <PreferenceCategory
        android:key="fingerprint_authentication"
        android:title="@string/fingerprint_authentication_cat_title">

        <com.jarvis.settings.preferences.SystemSettingSwitchPreference
            android:key="fp_success_vibrate"
            android:title="@string/fp_success_vibrate_title"
            android:summary="@string/fp_success_vibrate_summary"
            android:defaultValue="true" />

        <com.jarvis.settings.preferences.SystemSettingSwitchPreference
            android:key="fp_error_vibrate"
            android:title="@string/fp_error_vibrate_title"
            android:summary="@string/fp_error_vibrate_summary"
            android:defaultValue="true" />

    </PreferenceCategory>
</PreferenceScreen>
